--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
   },
   "include": [
     "next-env.d.ts",
+    "types/static-assets.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
